# scraping_tp

./: .gitignore  README.md  config.py  docker-compose.yml  pyproject.toml  scraping_tp.py  scraping_tw.py  settings.json  settings.py
dockerfiles/python/: Dockerfile
scraping_tp/: csv_creator.py
tests/: test_create_csv_by_requests.py  test_create_csv_by_selenium.py
