[tool.poetry]
name = "scraping-tp"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dynaconf = "^3.2.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# See https://qiita.com/taskforce_Hisui/items/9b89c5fad5ad327af9db
[tool.ruff]
line-length = 119
select = ["ALL"]
ignore = [
    "D",
    "PLR0913",
    "ANN002",
    "ANN003",
    "ANN101",
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ANN201",
    "N802",
    "ARG",
]

[tool.ruff.pydocstyle]
convention = "google"
